simplify tournament reducer

--- a/sample-data.yaml
+++ b/sample-data.yaml
@@ -1,5 +1,5 @@
 tournament:
-  tournamentInfo:
+  info:
     title: Tenpai Summer Championship 2022
     location: Lautapelikahvila Taverna
     start: 2022-06-02T11:00:00Z
