--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.23",
-    "js-yaml": "^4.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -47,7 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/js-yaml": "^4.0.5"
-  }
+  "devDependencies": {}
 }
