--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.23",
+    "@types/recharts": "^1.8.23",
     "react": "^17.0.2",
     "react-confetti": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "recharts": "^2.1.13",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.9",
