--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "read-excel-file": "^5.5.0",
     "recharts": "^2.1.13",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
